--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <body id="top">
 
   <div id="sideNav" class="side-nav">
-    <a href="#">🏠 HOME</a>
+    <a href="#" onclick="closeNav()">🏠 HOME</a>
     <a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank">👨‍🎓 STUDENTS LIST</a>
     <a href="homework.html">📚 HOMEWORK</a>
     <a href="Notices.html">📢 NOTICE</a>
