--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice: IT 402 by Sumit Arora book is uploaded in book section. Please check the Books section, and Wait for English's, Hindi's Help Book and Physics Education's Book.
+      🔔 Important Notice: IT 402 by Sumit Arora book is uploaded in book section. Please check the Books section, and Wait for English's, Hindi's Help Book and Physical Education's Book.
     </marquee>
   </div>
 
