--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <li><a href="Notices.html" class="btn btn-notice">📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts">✍️ POSTS</a></li>
       <li><a href="Books.html" class="btn btn-books">📖 BOOKS</a></li>
-      <li><a href="#contact" class="btn btn-contact">☎️ CONTACT</a></li>
+      <li><a href="#contact" class="btn btn-contact">☎️ CONTACT US</a></li>
       <li><a href="#FeePayment" class="btn btn-fee">💸 FEE PAYMENT</a></li>
     </ul>
   </nav>
