--- a/homework.html
+++ b/homework.html
@@ -105,13 +105,13 @@
 
   <div class="content">
     <div class="homework-box">
-      <h2>📝 Today's Homework 7-July-2025 </h2>
+      <h2>📝 Today's Homework 8-July-2025 </h2>
       <ul>
-        <li>English: Complete Copy.</li>
-        <li>Hindi: Read the poem poem and complete copy.</li>
+        <li>English: Complete Copy & Read Story.</li>
+        <li>Hindi: Complete Poem's Exercise.</li>
         <li>Science: Make Notes/Read chapter.</li>
         <li>Maths: ----------.</li>
-        <li>Social Science: Complete Extra Questions, Map Work of 2nd Chapter, try to solce exercise.</li>
+        <li>Social Science: Complete Extra Questions, Map Work of 2nd Chapter, try to solve exercise.</li>
         <li>Bio: ---------.</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
