--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <nav>
     <ul class="nav-buttons">
       <li><a href="#" class="btn btn-home">🏠 HOME</a></li>
-      <li><a href="https://sssvmclass10thf.github.io/sssvmclass10thf/Fancy_Student_List.pdf" target="_blank">👨‍🎓 STUDENTS LIST</a></li>
+      <li><a href="https://sssvmclass10thf.github.io/sssvmclass10thf/Fancy_Student_List.pdf" class="btn btn-homework"target="_blank">👨‍🎓 STUDENTS LIST</a></li>
       <li><a href="homework.html" class="btn btn-homework">📚 HOMEWORK</a></li>
       <li><a href="Notices.html" class="btn btn-notice">📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts">✍️ POSTS</a></li>
