--- a/Books.html
+++ b/Books.html
@@ -303,6 +303,31 @@ box-shadow: 0 0 20px #ff5252, 0 0 40px #ff1744;
         </ul>  
       </div>  
     </div>  
+  <div class="subject">
+  <div class="subject-header">Footprints Without Feet (Helpbook)</div>
+  <div class="chapter-list">
+    <ul>
+      <li>
+        <a href="https://drive.google.com/file/d/1B2CYeGRGHMrp4lhTfjH3y05foI3xT9Ud/preview
+" target="_blank">
+          📗 1st Part </li>
+          
+      <li>
+        <a href="https://drive.google.com/file/d/1gJ2y01IEHg931puPspoxyEdSZ0X1P6XZ/preview
+" target="_blank">
+          📗 2nd Part </li>
+      <li>    <a href="https://drive.google.com/file/d/1jUEcrk7cQr-uhejmNeF8KnjK-Extn2OV/preview
+/preview" target="_blank">
+          📗 3rd Part </li>
+        <li>    <a href="https://drive.google.com/file/d/1w0jFlF-l_1AFXmJCVyC02ZeunSp4iu-E/view?usp=drive_link
+" target="_blank">
+          📗 4th Part </li>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
     </div>          
 <a class="back-button" href="index.html">⬅️ Back to Home</a>    <script>          
     const headers = document.querySelectorAll('.subject-header');          
