--- a/Books.html
+++ b/Books.html
@@ -327,6 +327,20 @@ box-shadow: 0 0 20px #ff5252, 0 0 40px #ff1744;
     </ul>
   </div>
 </div>
+  <div class="subject">
+  <div class="subject-header">Physical Education</div>
+  <div class="chapter-list">
+    <ul>
+      <li>
+        <a href="https://drive.google.com/file/d/1S6QSpJyVW73sNK8wMjem0GZqrTWISUzJ/preview
+" target="_blank">
+          📗 Combined PDF (All Chapters)
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
 
     </div>          
 <a class="back-button" href="index.html">⬅️ Back to Home</a>    <script>          
