--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
   <div id="sideNav" class="side-nav">
     <a href="#" onclick="closeNav()">🏠 HOME</a>
-    <a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank">👨‍🎓 STUDENTS LIST</a>
+    <a href="https://drive.google.com/file/d/14p80M0_mtte4Xfa_rCgKruxyV8wbwS7c/preview" target="_blank">👨‍🎓 STUDENTS LIST</a>
     <a href="homework.html">📚 HOMEWORK</a>
     <a href="Notices.html">📢 NOTICE</a>
     <a href="post.html">✍️ POSTS</a>
@@ -312,7 +312,7 @@
   <nav>
     <ul class="nav-buttons">
       <li><a href="#" class="btn btn-home">🏠 HOME</a></li>
-      <li><a href="https://sssvmclass10thf.github.io/sssvmclass10thf/Fancy_Student_List.pdf" class="btn btn-homework"target="_blank">👨‍🎓 STUDENTS LIST</a></li>
+      <li><a href="https://drive.google.com/file/d/14p80M0_mtte4Xfa_rCgKruxyV8wbwS7c/preview" class="btn btn-homework"target="_blank">👨‍🎓 STUDENTS LIST</a></li>
       <li><a href="homework.html" class="btn btn-homework">📚 HOMEWORK</a></li>
       <li><a href="Notices.html" class="btn btn-notice">📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts">✍️ POSTS</a></li>
