--- a/homework.html
+++ b/homework.html
@@ -107,12 +107,12 @@
     <div class="homework-box">
       <h2>📝 Today's Homework 9-July-2025 </h2>
       <ul>
-        <li>English: Complete Copy.</li>
+        <li>English: Revise Narration.</li>
         <li>Hindi: Complete Poem's Exercise.</li>
         <li>Science: Make Notes/Read chapter.</li>
-        <li>Maths: ----------.</li>
+        <li>Maths: Complete Copy.</li>
         <li>Social Science: Complete Chapter 2.</li>
-        <li>Bio: ---------.</li>
+        <li>IT 402: Complete Copy.</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
