--- a/Notices.html
+++ b/Notices.html
@@ -177,9 +177,9 @@
           <tr><td>Monday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>English</td><td>Geography</td><td>Biology</td></tr>
           <tr><td>Tuesday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>English</td><td>Geography</td><td>Biology</td></tr>
           <tr><td>Wednesday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>English</td><td>Geography</td><td>Biology</td></tr>
-          <tr><td>Thursday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td></tr>
-          <tr><td>Friday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td></tr>
-          <tr><td>Saturday</td><td>S.st.</td><td>Chemistry</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td>
+          <tr><td>Thursday</td><td>S.st.</td><td>Physics</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td></tr>
+          <tr><td>Friday</td><td>S.st.</td><td>Physics</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td></tr>
+          <tr><td>Saturday</td><td>S.st.</td><td>Physics</td><td>Maths</td><td>English</td><td>Hindi</td><td>Maths</td><td>Physical Ed.</td><td>IT</td>
           </tr>
         </tbody>
       </table>
