--- a/Notices.html
+++ b/Notices.html
@@ -147,12 +147,17 @@
       <h2>📢 Latest Class 10-F Notices</h2>
       <ul>
         <li>🗓️ Classes are running continuously from 20 JUNE 2025 after the summer vacations.</li>
-        <li>📚 Bring IT classwork copy.</li>
-        <li>🏫 1st Periodic Test Answer Sheet will be shown on 8th July - 9th July</li>
-        <li>📚 Complete History's work daily.</li>
         <li>🔔 School timing 7:30 a.m. - 12:40 p.m.</li>
       </ul>
       
+    </div>
+
+    <!-- Extra Notice Box Added -->
+    <div class="notice-box" style="margin-top: 30px;">
+      <h2>📢 विशेष सूचना</h2>
+      <ul>
+        <li>🎽 जिन भैयाओं को कल कबड्डी खेलना है वे सभी ड्रेस लेके आयेंगे।</li>
+      </ul>
     </div>
 
     <!-- Subject Timetable Section -->
@@ -187,4 +192,4 @@
     <a class="back-button" href="index.html">⬅️ Back to Home</a>
   </div>
 </body>
-</html>
+  </html>
