--- a/Books.html
+++ b/Books.html
@@ -1,151 +1,144 @@
-<!DOCTYPE html>  <html lang="en">    <head>        <meta charset="UTF-8" />          <meta name="viewport" content="width=device-width, initial-scale=1" />            <title>Class 10 Books - Light Blue Theme</title>          
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />          
-  <style>          
-    body {          
-      font-family: 'Poppins', sans-serif;          
-      background-color: #e6f0fa;          
-      margin: 0;          
-      padding: 0;          
-      color: #1a237e;          
-    }  header {          
-  background: linear-gradient(90deg, #64b5f6, #42a5f5);          
-  color: #fdfde7;          
-  padding: 50px 20px;          
-  text-align: center;          
-  box-shadow: 0 4px 16px rgba(33, 150, 243, 0.4);          
-}    header h1 {      
-margin: 0;      
-font-size: 36px;      
-letter-spacing: 1px;      
-text-shadow: 1px 1px 4px rgba(25, 118, 210, 0.6);      
-}  .content {    
-max-width: 980px;    
-margin: 40px auto;    
-padding: 0 20px;    
-}  .subject {  
-background-color: #bbdefb;  
-border-radius: 18px;  
-margin-bottom: 25px;  
-box-shadow: 0 6px 15px rgba(100, 181, 246, 0.3);  
-overflow: hidden;  
-transition: transform 0.3s ease;  
-}  .subject:hover {
-transform: scale(1.02);
-box-shadow: 0 8px 25px rgba(66, 165, 245, 0.5);
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class 10 NCERT Books</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #fff8f0;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
 
-.subject-header {
-padding: 20px 25px;
-font-weight: 700;
-font-size: 20px;
-background-color: #64b5f6;
-cursor: pointer;
-user-select: none;
-color: #fefae0;
-border-bottom: 2px solid #42a5f5;
-transition: background-color 0.3s ease;
-}
+    header {
+      background: linear-gradient(90deg, #ff512f, #dd2476);
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
 
-.subject-header:hover {
-background-color: #42a5f5;
-}
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+      letter-spacing: 1px;
+    }
 
-.chapter-list {
-max-height: 0;
-overflow: hidden;
-background: #e3f2fd;
-padding: 0 25px;
-transition: max-height 0.5s ease, padding 0.3s ease;
-}
+    .content {
+      max-width: 980px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
 
-.chapter-list.open {
-max-height: 3000px;
-padding: 20px 25px;
-}
+    .subject {
+      background-color: #ffe8d6;
+      border-radius: 18px;
+      margin-bottom: 25px;
+      box-shadow: 0 6px 15px rgba(255, 105, 135, 0.2);
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
 
-.chapter-list h4 {
-margin-bottom: 8px;
-color: #1a237e;
-}
+    .subject:hover {
+      transform: scale(1.02);
+      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.4);
+    }
 
-.chapter-list ul {
-list-style: none;
-padding-left: 20px;
-margin: 10px 0 20px 0;
-}
+    .subject-header {
+      padding: 20px 25px;
+      font-weight: 700;
+      font-size: 20px;
+      background-color: #ff7043;
+      cursor: pointer;
+      user-select: none;
+      color: white;
+      border-bottom: 2px solid #ff5722;
+      transition: background-color 0.3s ease;
+    }
 
-.chapter-list li {
-margin: 10px 0;
-font-size: 16px;
-position: relative;
-padding-left: 24px;
-color: #0d47a1;
-}
+    .subject-header:hover {
+      background-color: #ff5722;
+    }
 
-.chapter-list li::before {
-content: "📘";
-position: absolute;
-left: 0;
-font-size: 18px;
-}
+    .chapter-list {
+      max-height: 0;
+      overflow: hidden;
+      background: #fff3e6;
+      padding: 0 25px;
+      transition: max-height 0.5s ease, padding 0.3s ease;
+    }
 
-.chapter-list a {
-text-decoration: none;
-color: #1565c0;
-font-weight: 600;
-transition: color 0.3s ease;
-}
+    .chapter-list.open {
+      max-height: 3000px;
+      padding: 20px 25px;
+    }
 
-.chapter-list a:hover {
-color: #0d47a1;
-text-decoration: underline;
-}
+    .chapter-list h4 {
+      margin-bottom: 8px;
+      color: #d84315;
+    }
 
-.back-home {
-display: block;
-margin: 50px auto 30px auto;
-padding: 12px 30px;
-font-size: 16px;
-font-weight: 600;
-text-align: center;
-text-decoration: none;
-background-color: #42a5f5;
-color: white;
-border-radius: 10px;
-box-shadow: 0 0 14px #64b5f6, 0 0 28px #42a5f5;
-transition: background-color 0.3s ease, box-shadow 0.3s ease;
-width: max-content;
-}
+    .chapter-list ul {
+      list-style: none;
+      padding-left: 20px;
+      margin: 10px 0 20px 0;
+    }
 
-.back-home:hover {
-background-color: #1e88e5;
-box-shadow: 0 0 20px #1e88e5, 0 0 40px #1565c0;
-}
+    .chapter-list li {
+      margin: 10px 0;
+      font-size: 16px;
+      position: relative;
+      padding-left: 24px;
+      color: #bf360c;
+    }
 
-.back-button {
-display: block;
-margin: 50px auto 30px auto;
-padding: 12px 30px;
-font-size: 16px;
-font-weight: 600;
-text-align: center;
-text-decoration: none;
-background-color: #ff8a80; /* Light Red /
-color: #ffffff; / White text */
-border-radius: 10px;
-box-shadow: 0 0 14px #ffab91, 0 0 28px #ff5252;
-transition: background-color 0.3s ease, box-shadow 0.3s ease;
-width: max-content;
-}
+    .chapter-list li::before {
+      content: "📘";
+      position: absolute;
+      left: 0;
+      font-size: 18px;
+    }
 
-.back-button:hover {
-background-color: #ff5252; /* Deeper red on hover */
-box-shadow: 0 0 20px #ff5252, 0 0 40px #ff1744;
-}
-</style>
+    .chapter-list a {
+      text-decoration: none;
+      color: #d84315;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
 
-</head>          
-<body>    <header>          
+    .chapter-list a:hover {
+      color: #bf360c;
+      text-decoration: underline;
+    }
+
+    .back-button {
+      display: block;
+      margin: 50px auto 30px auto;
+      padding: 12px 30px;
+      font-size: 16px;
+      font-weight: 600;
+      text-align: center;
+      text-decoration: none;
+      background-color: #17a2b8;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 14px #17a2b8, 0 0 28px #17a2b8;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      width: max-content;
+    }
+
+    .back-button:hover {
+      background-color: #138496;
+      box-shadow: 0 0 20px #138496, 0 0 40px #117a8b;
+    }
+  </style>
+</head>
+<body>
+  <header>
     <h1>📚 Class 10 NCERT Books (All Subjects)</h1>          
   </header>    <div class="content">  <!-- Mathematics -->          
 <div class="subject">          
@@ -340,16 +333,15 @@ box-shadow: 0 0 20px #ff5252, 0 0 40px #ff1744;
     </ul>
   </div>
 </div>
-
-
-    </div>          
-<a class="back-button" href="index.html">⬅️ Back to Home</a>    <script>          
-    const headers = document.querySelectorAll('.subject-header');          
-    headers.forEach(header => {          
-      header.addEventListener('click', () => {          
-        const chapterList = header.nextElementSibling;          
-        chapterList.classList.toggle('open');          
-      });          
-    });          
-  </script>  </body>          
-</html>         
+  <a class="back-button" href="index.html">⬅️ Back to Home</a>
+  <script>
+    const headers = document.querySelectorAll('.subject-header');
+    headers.forEach(header => {
+      header.addEventListener('click', () => {
+        const chapterList = header.nextElementSibling;
+        chapterList.classList.toggle('open');
+      });
+    });
+  </script>
+</body>
+        </html>
