--- a/Books.html
+++ b/Books.html
@@ -2,30 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Class 10 NCERT Books</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Class 10 Books - Green Aqua Theme</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #fff8f0;
+      background-color: #e0f2f1;
       margin: 0;
       padding: 0;
-      color: #333;
+      color: #004d40;
     }
 
     header {
-      background: linear-gradient(90deg, #ff512f, #dd2476);
-      color: white;
-      padding: 40px 20px;
+      background: linear-gradient(90deg, #4dd0e1, #26c6da);
+      color: #fff;
+      padding: 50px 20px;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 16px rgba(38, 198, 218, 0.4);
     }
 
     header h1 {
       margin: 0;
       font-size: 36px;
       letter-spacing: 1px;
+      text-shadow: 1px 1px 4px rgba(0, 131, 143, 0.6);
     }
 
     .content {
@@ -35,39 +36,39 @@
     }
 
     .subject {
-      background-color: #ffe8d6;
+      background-color: #b2dfdb;
       border-radius: 18px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 15px rgba(255, 105, 135, 0.2);
+      box-shadow: 0 6px 15px rgba(0, 150, 136, 0.2);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
 
     .subject:hover {
       transform: scale(1.02);
-      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.4);
+      box-shadow: 0 8px 25px rgba(0, 150, 136, 0.4);
     }
 
     .subject-header {
       padding: 20px 25px;
       font-weight: 700;
       font-size: 20px;
-      background-color: #ff7043;
+      background-color: #4db6ac;
       cursor: pointer;
       user-select: none;
-      color: white;
-      border-bottom: 2px solid #ff5722;
+      color: #fff;
+      border-bottom: 2px solid #26a69a;
       transition: background-color 0.3s ease;
     }
 
     .subject-header:hover {
-      background-color: #ff5722;
+      background-color: #26a69a;
     }
 
     .chapter-list {
       max-height: 0;
       overflow: hidden;
-      background: #fff3e6;
+      background: #e0f2f1;
       padding: 0 25px;
       transition: max-height 0.5s ease, padding 0.3s ease;
     }
@@ -79,7 +80,7 @@
 
     .chapter-list h4 {
       margin-bottom: 8px;
-      color: #d84315;
+      color: #00695c;
     }
 
     .chapter-list ul {
@@ -93,11 +94,11 @@
       font-size: 16px;
       position: relative;
       padding-left: 24px;
-      color: #bf360c;
+      color: #004d40;
     }
 
     .chapter-list li::before {
-      content: "📘";
+      content: "📗";
       position: absolute;
       left: 0;
       font-size: 18px;
@@ -105,13 +106,13 @@
 
     .chapter-list a {
       text-decoration: none;
-      color: #d84315;
+      color: #00796b;
       font-weight: 600;
       transition: color 0.3s ease;
     }
 
     .chapter-list a:hover {
-      color: #bf360c;
+      color: #004d40;
       text-decoration: underline;
     }
 
@@ -123,17 +124,17 @@
       font-weight: 600;
       text-align: center;
       text-decoration: none;
-      background-color: #17a2b8;
+      background-color: #26a69a;
       color: white;
       border-radius: 10px;
-      box-shadow: 0 0 14px #17a2b8, 0 0 28px #17a2b8;
+      box-shadow: 0 0 14px #4db6ac, 0 0 28px #26a69a;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       width: max-content;
     }
 
     .back-button:hover {
-      background-color: #138496;
-      box-shadow: 0 0 20px #138496, 0 0 40px #117a8b;
+      background-color: #00796b;
+      box-shadow: 0 0 20px #00796b, 0 0 40px #004d40;
     }
   </style>
 </head>
@@ -333,7 +334,12 @@
     </ul>
   </div>
 </div>
-  <a class="back-button" href="index.html">⬅️ Back to Home</a>
+
+    <!-- Add other subjects like SST, English, IT, Helpbook, etc., in the same format -->
+
+    <a class="back-button" href="index.html">⬅ Back to Home</a>
+  </div>
+
   <script>
     const headers = document.querySelectorAll('.subject-header');
     headers.forEach(header => {
@@ -344,4 +350,4 @@
     });
   </script>
 </body>
-        </html>
+</html>
