--- a/Books.html
+++ b/Books.html
@@ -3,30 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Class 10 Books - Green Aqua Theme</title>
+  <title>Class 10 Books - Sky Blue Theme</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #e0f2f1;
+      background-color: #e6f0fa;
       margin: 0;
       padding: 0;
-      color: #004d40;
+      color: #0d47a1;
     }
 
     header {
-      background: linear-gradient(90deg, #4dd0e1, #26c6da);
-      color: #fff;
+      background: linear-gradient(90deg, #1976d2, #1565c0);
+      color: #ffffff;
       padding: 50px 20px;
       text-align: center;
-      box-shadow: 0 4px 16px rgba(38, 198, 218, 0.4);
+      box-shadow: 0 4px 16px rgba(21, 101, 192, 0.4);
     }
 
     header h1 {
       margin: 0;
       font-size: 36px;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(0, 131, 143, 0.6);
+      text-shadow: 1px 1px 4px rgba(13, 71, 161, 0.6);
     }
 
     .content {
@@ -36,39 +36,39 @@
     }
 
     .subject {
-      background-color: #b2dfdb;
+      background-color: #bbdefb;
       border-radius: 18px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 15px rgba(0, 150, 136, 0.2);
+      box-shadow: 0 6px 15px rgba(25, 118, 210, 0.2);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
 
     .subject:hover {
       transform: scale(1.02);
-      box-shadow: 0 8px 25px rgba(0, 150, 136, 0.4);
+      box-shadow: 0 8px 25px rgba(21, 101, 192, 0.3);
     }
 
     .subject-header {
       padding: 20px 25px;
       font-weight: 700;
       font-size: 20px;
-      background-color: #4db6ac;
+      background-color: #1976d2;
       cursor: pointer;
       user-select: none;
-      color: #fff;
-      border-bottom: 2px solid #26a69a;
+      color: #ffffff;
+      border-bottom: 2px solid #1565c0;
       transition: background-color 0.3s ease;
     }
 
     .subject-header:hover {
-      background-color: #26a69a;
+      background-color: #1565c0;
     }
 
     .chapter-list {
       max-height: 0;
       overflow: hidden;
-      background: #e0f2f1;
+      background: #e3f2fd;
       padding: 0 25px;
       transition: max-height 0.5s ease, padding 0.3s ease;
     }
@@ -80,7 +80,7 @@
 
     .chapter-list h4 {
       margin-bottom: 8px;
-      color: #00695c;
+      color: #0d47a1;
     }
 
     .chapter-list ul {
@@ -94,11 +94,11 @@
       font-size: 16px;
       position: relative;
       padding-left: 24px;
-      color: #004d40;
+      color: #0d47a1;
     }
 
     .chapter-list li::before {
-      content: "📗";
+      content: "📘";
       position: absolute;
       left: 0;
       font-size: 18px;
@@ -106,17 +106,17 @@
 
     .chapter-list a {
       text-decoration: none;
-      color: #00796b;
+      color: #0d47a1;
       font-weight: 600;
       transition: color 0.3s ease;
     }
 
     .chapter-list a:hover {
-      color: #004d40;
+      color: #1565c0;
       text-decoration: underline;
     }
 
-    .back-button {
+    .back-home {
       display: block;
       margin: 50px auto 30px auto;
       padding: 12px 30px;
@@ -124,23 +124,23 @@
       font-weight: 600;
       text-align: center;
       text-decoration: none;
-      background-color: #26a69a;
+      background-color: #1976d2;
       color: white;
       border-radius: 10px;
-      box-shadow: 0 0 14px #4db6ac, 0 0 28px #26a69a;
+      box-shadow: 0 0 14px #42a5f5, 0 0 28px #1565c0;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       width: max-content;
     }
 
-    .back-button:hover {
-      background-color: #00796b;
-      box-shadow: 0 0 20px #00796b, 0 0 40px #004d40;
+    .back-home:hover {
+      background-color: #0d47a1;
+      box-shadow: 0 0 20px #0d47a1, 0 0 40px #1565c0;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>📚 Class 10 NCERT Books (All Subjects)</h1>          
+   <h1>📚 Class 10 NCERT Books (All Subjects)</h1>          
   </header>    <div class="content">  <!-- Mathematics -->          
 <div class="subject">          
   <div class="subject-header">Mathematics</div>          
@@ -335,19 +335,14 @@
   </div>
 </div>
 
-    <!-- Add other subjects like SST, English, IT, Helpbook, etc., in the same format -->
-
-    <a class="back-button" href="index.html">⬅ Back to Home</a>
+    <a href="index.html" class="back-home">⬅ Back to Home</a>
   </div>
 
   <script>
-    const headers = document.querySelectorAll('.subject-header');
-    headers.forEach(header => {
-      header.addEventListener('click', () => {
-        const chapterList = header.nextElementSibling;
-        chapterList.classList.toggle('open');
-      });
-    });
+    function toggleList(header) {
+      const list = header.nextElementSibling;
+      list.classList.toggle("open");
+    }
   </script>
 </body>
 </html>
