--- a/Books.html
+++ b/Books.html
@@ -2,31 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Class 10 Books - Sky Blue Theme</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class 10 NCERT Books</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #e6f0fa;
+      background-color: #fff8f0;
       margin: 0;
       padding: 0;
-      color: #0d47a1;
+      color: #333;
     }
 
     header {
-      background: linear-gradient(90deg, #1976d2, #1565c0);
-      color: #ffffff;
-      padding: 50px 20px;
+      background: linear-gradient(90deg, #ff512f, #dd2476);
+      color: white;
+      padding: 40px 20px;
       text-align: center;
-      box-shadow: 0 4px 16px rgba(21, 101, 192, 0.4);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     header h1 {
       margin: 0;
       font-size: 36px;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(13, 71, 161, 0.6);
     }
 
     .content {
@@ -36,39 +35,39 @@
     }
 
     .subject {
-      background-color: #bbdefb;
+      background-color: #ffe8d6;
       border-radius: 18px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 15px rgba(25, 118, 210, 0.2);
+      box-shadow: 0 6px 15px rgba(255, 105, 135, 0.2);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
 
     .subject:hover {
       transform: scale(1.02);
-      box-shadow: 0 8px 25px rgba(21, 101, 192, 0.3);
+      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.4);
     }
 
     .subject-header {
       padding: 20px 25px;
       font-weight: 700;
       font-size: 20px;
-      background-color: #1976d2;
+      background-color: #ff7043;
       cursor: pointer;
       user-select: none;
-      color: #ffffff;
-      border-bottom: 2px solid #1565c0;
+      color: white;
+      border-bottom: 2px solid #ff5722;
       transition: background-color 0.3s ease;
     }
 
     .subject-header:hover {
-      background-color: #1565c0;
+      background-color: #ff5722;
     }
 
     .chapter-list {
       max-height: 0;
       overflow: hidden;
-      background: #e3f2fd;
+      background: #fff3e6;
       padding: 0 25px;
       transition: max-height 0.5s ease, padding 0.3s ease;
     }
@@ -80,7 +79,7 @@
 
     .chapter-list h4 {
       margin-bottom: 8px;
-      color: #0d47a1;
+      color: #d84315;
     }
 
     .chapter-list ul {
@@ -94,7 +93,7 @@
       font-size: 16px;
       position: relative;
       padding-left: 24px;
-      color: #0d47a1;
+      color: #bf360c;
     }
 
     .chapter-list li::before {
@@ -106,17 +105,17 @@
 
     .chapter-list a {
       text-decoration: none;
-      color: #0d47a1;
+      color: #d84315;
       font-weight: 600;
       transition: color 0.3s ease;
     }
 
     .chapter-list a:hover {
-      color: #1565c0;
+      color: #bf360c;
       text-decoration: underline;
     }
 
-    .back-home {
+    .back-button {
       display: block;
       margin: 50px auto 30px auto;
       padding: 12px 30px;
@@ -124,23 +123,23 @@
       font-weight: 600;
       text-align: center;
       text-decoration: none;
-      background-color: #1976d2;
+      background-color: #17a2b8;
       color: white;
       border-radius: 10px;
-      box-shadow: 0 0 14px #42a5f5, 0 0 28px #1565c0;
+      box-shadow: 0 0 14px #17a2b8, 0 0 28px #17a2b8;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       width: max-content;
     }
 
-    .back-home:hover {
-      background-color: #0d47a1;
-      box-shadow: 0 0 20px #0d47a1, 0 0 40px #1565c0;
+    .back-button:hover {
+      background-color: #138496;
+      box-shadow: 0 0 20px #138496, 0 0 40px #117a8b;
     }
   </style>
 </head>
 <body>
   <header>
-   <h1>📚 Class 10 NCERT Books (All Subjects)</h1>          
+    <h1>📚 Class 10 NCERT Books (All Subjects)</h1>          
   </header>    <div class="content">  <!-- Mathematics -->          
 <div class="subject">          
   <div class="subject-header">Mathematics</div>          
@@ -334,15 +333,15 @@
     </ul>
   </div>
 </div>
-
-    <a href="index.html" class="back-home">⬅ Back to Home</a>
-  </div>
-
+  <a class="back-button" href="index.html">⬅ Back to Home</a>
   <script>
-    function toggleList(header) {
-      const list = header.nextElementSibling;
-      list.classList.toggle("open");
-    }
+    const headers = document.querySelectorAll('.subject-header');
+    headers.forEach(header => {
+      header.addEventListener('click', () => {
+        const chapterList = header.nextElementSibling;
+        chapterList.classList.toggle('open');
+      });
+    });
   </script>
 </body>
 </html>
