--- a/Books.html
+++ b/Books.html
@@ -8,18 +8,18 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #fff8f0;
+      background-color: #e6f0fa;
       margin: 0;
       padding: 0;
-      color: #333;
+      color: #0d47a1;
     }
 
     header {
-      background: linear-gradient(90deg, #ff512f, #dd2476);
+      background: linear-gradient(90deg, #1976d2, #1565c0);
       color: white;
-      padding: 40px 20px;
+      padding: 50px 20px;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(21,101,192,0.4);
     }
 
     header h1 {
@@ -35,39 +35,39 @@
     }
 
     .subject {
-      background-color: #ffe8d6;
+      background-color: #bbdefb;
       border-radius: 18px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 15px rgba(255, 105, 135, 0.2);
+      box-shadow: 0 6px 15px rgba(25, 118, 210, 0.2);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
 
     .subject:hover {
       transform: scale(1.02);
-      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.4);
+      box-shadow: 0 8px 25px rgba(21, 101, 191, 0.4);
     }
 
     .subject-header {
       padding: 20px 25px;
       font-weight: 700;
       font-size: 20px;
-      background-color: #ff7043;
+      background-color: #1e88e5;
       cursor: pointer;
       user-select: none;
-      color: white;
-      border-bottom: 2px solid #ff5722;
+      color: #ffffff;
+      border-bottom: 2px solid #1e88e5;
       transition: background-color 0.3s ease;
     }
 
     .subject-header:hover {
-      background-color: #ff5722;
+      background-color: #1565c0;
     }
 
     .chapter-list {
       max-height: 0;
       overflow: hidden;
-      background: #fff3e6;
+      background: #e3f2fd;
       padding: 0 25px;
       transition: max-height 0.5s ease, padding 0.3s ease;
     }
@@ -93,7 +93,7 @@
       font-size: 16px;
       position: relative;
       padding-left: 24px;
-      color: #bf360c;
+      color: #0d47a1;
     }
 
     .chapter-list li::before {
@@ -105,13 +105,13 @@
 
     .chapter-list a {
       text-decoration: none;
-      color: #d84315;
+      color: #0d47a1;
       font-weight: 600;
       transition: color 0.3s ease;
     }
 
     .chapter-list a:hover {
-      color: #bf360c;
+      color: #1565c0;
       text-decoration: underline;
     }
 
