--- a/Books.html
+++ b/Books.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.1" />
   <title>Class 10 Books - Sky Blue Theme</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
@@ -20,14 +20,14 @@
       color: #ffffff;
       padding: 50px 20px;
       text-align: center;
-      box-shadow: 0 4px 16px rgba(21, 101, 192, 0.4);
+      box-shadow: 0 4px 16px rgba(0,0,0, 0.2);
     }
 
     header h1 {
       margin: 0;
       font-size: 36px;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(13, 71, 161, 0.6);
+      
     }
 
     .content {
@@ -47,7 +47,7 @@
 
     .subject:hover {
       transform: scale(1.02);
-      box-shadow: 0 8px 25px rgba(21, 101, 192, 0.3);
+      box-shadow: 0 8px 25px #1565c0;
     }
 
     .subject-header {
@@ -117,7 +117,7 @@
       text-decoration: underline;
     }
 
-    .back-home {
+    .back-button {
       display: block;
       margin: 50px auto 30px auto;
       padding: 12px 30px;
@@ -133,7 +133,7 @@
       width: max-content;
     }
 
-    .back-home:hover {
+    .back-button:hover {
       background-color: #0d47a1;
       box-shadow: 0 0 20px #0d47a1, 0 0 40px #1565c0;
     }
@@ -335,15 +335,16 @@
     </ul>
   </div>
 </div>
-
-    <a href="index.html" class="back-home">⬅ Back to Home</a>
-  </div>
-
+<a class="back-button" href="index.html">⬅ Back to Home</a>
   <script>
-    function toggleList(header) {
-      const list = header.nextElementSibling;
-      list.classList.toggle("open");
-    }
+    const headers = document.querySelectorAll('.subject-header');
+    headers.forEach(header => {
+      header.addEventListener('click', () => {
+        const chapterList = header.nextElementSibling;
+        chapterList.classList.toggle('open');
+      });
+    });
   </script>
 </body>
 </html>
+   
