--- a/Books.html
+++ b/Books.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.1" />
-  <title>Class 10 Books - Sky Blue Theme</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class 10 NCERT Books</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -18,9 +17,9 @@
     header {
       background: linear-gradient(90deg, #1976d2, #1565c0);
       color: #ffffff;
-      padding: 50px 20px;
+      padding: 40px 20px;
       text-align: center;
-      box-shadow: 0 4px 16px rgba(0,0,0, 0.2);
+      box-shadow: 0 4px 12px rgba(0,0,0, 0.2);
     }
 
     header h1 {
@@ -40,7 +39,7 @@
       background-color: #42a5f5;
       border-radius: 18px;
       margin-bottom: 25px;
-      box-shadow: 0 6px 15px rgba(25, 118, 210, 0.2);
+      box-shadow: 0 6px 15px rgba(225, 105, 135, 0.2);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
