--- a/Books.html
+++ b/Books.html
@@ -286,7 +286,7 @@
   </div>   
   <!-- English First Flight -->          
 <!-- Add this full block inside the same <div class="content"> just like others -->  <div class="subject">          
-  <div class="subject-header">Hindi</div>          
+  <div class="subject-header">Hindi PW</div>          
   <div class="chapter-list">          
     <ul>          
       <li><a href="https://drive.google.com/file/d/15mENE_n1TPTS4dpD7GzG01ifAzUECbhK/preview
