--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
     <a href="Notices.html">📢 NOTICE</a>
     <a href="post.html">✍️ POSTS</a>
     <a href="Books.html">📖 BOOKS</a>
+    <a href="ncertsolution.html">💡 NCERT SOLUTIONS</a>
+    <a href="pyqs.html">⏳ PYQs<</a>
     <a href="#contact" onclick="closeNav()">☎️ CONTACT US</a>
     <a href="#FeePayment" onclick="closeNav()">💸 FEE PAYMENT</a>
     <a href="#" onclick="shareWebsite()">📤 SHARE WEBSITE</a>
@@ -317,6 +319,8 @@
       <li><a href="Notices.html" class="btn btn-notice">📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts">✍️ POSTS</a></li>
       <li><a href="Books.html" class="btn btn-books">📖 BOOKS</a></li>
+      <li><a href="ncertsolution.html" class="btn btn-posts">💡 NCERT SOLUTIONS</a></li>
+      <li><a href="pyqs.html" class="btn btn-posts">⏳ PYQs</a></li>
       <li><a href="#contact" class="btn btn-contact">☎️ CONTACT US</a></li>
       <li><a href="#FeePayment" class="btn btn-fee">💸 FEE PAYMENT</a></li>
     </ul>
