--- a/homework.html
+++ b/homework.html
@@ -108,11 +108,11 @@
       <h2>📝 Today's Homework 10-July-2025 </h2>
       <ul>
         <li>English: Revise Narration.</li>
-        <li>Hindi: Complete Poem's Exercise.</li>
+        <li>Hindi: Read Poem (Aatmkath).</li>
         <li>Science: Make Notes/Read chapter.</li>
         <li>Maths: Complete Copy.</li>
-        <li>Social Science: Complete Chapter 2.</li>
-        <li>IT 402: Complete Copy.</li>
+        <li>Social Science: Complete Chapter 2.(history)</li>
+        <li>IT 402: Complete Unit II (session 1)</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
