--- a/Notices.html
+++ b/Notices.html
@@ -156,7 +156,7 @@
     <div class="notice-box" style="margin-top: 30px;">
       <h2>📢 विशेष सूचना</h2>
       <ul>
-        <li>🎽 जिन भैयाओं को कल कबड्डी खेलना है वे सभी ड्रेस लेके आयेंगे।</li>
+        <li> History copy will be check on Monday.</li>
       </ul>
     </div>
 
