--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice: IT 402 by Sumit Arora book, Physical Education and English Helpbook is uploaded in book section. Please check the Books section. <br> Add This Site to your Homepage by clicking (Three dots).
+      🔔 Important Notice: PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br> Add This Site to your Homepage by clicking (Three dots).
     </marquee>
   </div>
 
